# self-harness

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.codex-plugin/: plugin.json
skills/self-harness/: SKILL.md
skills/self-harness/agents/: openai.yaml
skills/self-harness/references/: connector-adapters.md  contracts.md  paper-method.md  proposal-validation.md  simulation-design.md
tests/: test_self_harness.py
tools/: __init__.py
tools/self_harness/: __init__.py  cli.py  discovery.py  io.py  mining.py  models.py  proposals.py  simulations.py  traces.py  validation.py
