[project]
name = "self-harness"
version = "0.1.0"
description = "Portable skill helpers for Self-Harness trace mining and simulation planning."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
self-harness = "tools.self_harness.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

