[project]
name = "self-harness"
version = "0.1.0"
description = "Portable skill helpers for Self-Harness trace mining and simulation planning."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
self-harness = "self_harness.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
self_harness = "tools/self_harness"

[tool.setuptools.packages.find]
where = ["tools"]
include = ["self_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
